Basic index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Do Gordo Software & Food House</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="images/marca.gif">
+        <img src="images/gordo.jpg">
+    </div>
+</body>
+</html>
