--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/gordo.ico">
     <title>Do Gordo Software & Food House</title>
     <style>
         body {
@@ -10,6 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0px;
         }
         .container {
             display: flex;
