--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Software e pastel frito na hora">
+    <meta name="description" content="Sistema e pastel frito na hora">
     <link rel="icon" type="image/x-icon" href="images/gordo.ico">
     <title>Do Gordo Software & Food House</title>
     <style>
