Correct Gaucho's title

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <div class="team-card fade-in">
                 <img src="images/team/gaucho.jpg" alt="Gaucho" class="team-avatar">
                 <h3>Gaúcho</h3>
-                <div class="team-role">PHP Developer</div>
+                <div class="team-role">PHP Developer / Chimarrão Practitioner</div>
                 <p class="team-bio">Mass-assignment sem medo. Se funciona em produção, está certo. Escreve código como faz churrasco: no olho, sem medir, e sempre dá bom.</p>
                 <a href="https://www.linkedin.com/in/ddmfuhrmann/" target="_blank" rel="noopener" class="btn btn-primary btn-small">LinkedIn</a>
             </div>
